--- a/src/app/components/player/player.component.html
+++ b/src/app/components/player/player.component.html
@@ -21,8 +21,8 @@
       <div>
          <button id="play" (click)="playPauseAudio()">
             <img width="30px" [src]="playerManager.audio.paused ? 
-               '../../../assets/icons/play-icon.svg' : 
-               '../../../assets/icons/pause-icon.svg'">
+               'assets/icons/play-icon.svg' : 
+               'assets/icons/pause-icon.svg'">
          </button>
       </div>
 
