--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <img src="../assets/images/kh-themes-logo.png" id="logo">
+  <img src="assets/images/kh-themes-logo.png" id="logo">
 </header>
 
 <div class="container">
