--- a/src/app/components/rpg-screen/rpg-footer.css
+++ b/src/app/components/rpg-screen/rpg-footer.css
@@ -22,7 +22,7 @@ footer {
 
 .player-actions {
    flex-direction: column;
-   justify-content: space-between;
+   justify-content: space-evenly;
    width: max(100px, 25%);
 }
 .player-actions .action {
